--- a/css/sass/structure/content/_event-items.scss
+++ b/css/sass/structure/content/_event-items.scss
@@ -42,8 +42,8 @@
 	display: block;
 	background: $colorPrimary;
 	color: #fff;
-	padding: 5px 10px;
-	width: 40px;
+	padding: 5px;
+	width: 45px;
 	text-align: center;
 }
 
