--- a/css/sass/structure/navigation/_metanav.scss
+++ b/css/sass/structure/navigation/_metanav.scss
@@ -179,9 +179,11 @@
 	
 	
     }
+     #meta-nav {
+	    padding: 10px 0;
+     }
+    
     .cloned-meta-links {
-	padding-left: 15px;
-	padding-right: 15px;
 	margin-bottom: 0px;
     }
     .cloned-meta-links, 
