--- a/css/sass/structure/content/_news-items.scss
+++ b/css/sass/structure/content/_news-items.scss
@@ -43,13 +43,12 @@
 	float: none;
 	margin: 10px auto;
 	
-	@include box-shadow(0 1px 2px rgba(0,0,0,0.3));
-	
 	img {
 	    @include box-shadow(none);
 	}
-
+	
 	@media (min-width: $screen-sm) {
+	    @include box-shadow(0 1px 2px rgba(0,0,0,0.3));
 	    padding: 4px;
 	    background: $colorStandardHellgrau;
 	    margin: 5px auto;
@@ -105,6 +104,43 @@
 		}
 	}
 	
+}
+
+
+
+.thumbnailregion {
+   display: inline;
+   @extend .col-xs-12;
+   text-align: center;
+    
+   .passpartout {
+        width: 100%;
+	text-align: center;
+    }
+   
+    @media (min-width: $screen-sm) {
+	width: 220px;
+	
+	.passpartout {
+	     max-width: 220px;
+	}
+	
+    }
+    
+}
+.teaserregion {
+    @extend .col-xs-12;
+    @media (min-width: $screen-sm ) {
+	width: calc(100% - 250px);
+	
+	p {
+	    display: inline;
+	  
+	}
+    }
+}
+.fullwidthregion {
+    @extend .col-xs-12;
 }
 
 
