--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -2151,7 +2151,7 @@ p { margin: 0; padding: 0 0 11px 0; font-size: 16px; line-height: 22.4px; font-s
 #content p { -moz-hyphens: auto; -o-hyphens: auto; -webkit-hyphens: auto; -ms-hyphens: auto; hyphens: auto; }
 #content .textwidget p { font-size: 13px; }
 p.searchnotice { font-size: 24px; line-height: 28px; padding: 4px 0 22px 0; }
-#content .span4 .widget p, #content .sidebar-inline .widget p { font-size: 13px; line-height: 18.2px; font-size: 0.8125rem; line-height: 1.1375rem; }
+#content .span4 .widget p, #content .startpage-sidebar .widget p, #content .sidebar-inline .widget p { font-size: 13px; line-height: 18.2px; font-size: 0.8125rem; line-height: 1.1375rem; }
 
 /*-----------------------------------------------------------------------------------*/
 /* Links
@@ -2240,17 +2240,23 @@ ol li ul li { list-style-type: circle; }
 /*-----------------------------------------------------------------------------------*/
 textarea, input, select { font-family: "roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] { width: 290px; padding: 5px 10px; }
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] { width: 290px; padding: 5px 10px; font-size: 16px; line-height: 22.4px; font-size: 1rem; line-height: 1.4rem; }
 
 textarea { height: 100px; }
 
-form { border: 1px solid #dde5f0; padding: 20px; }
+form { padding: 20px; display: inline-block; border: 1px solid #dde5f0; }
+form.noborder { border: none; }
+form legend { margin: 0; padding: 0 0 11px 0; font-size: 20px; line-height: 28px; font-size: 1.25rem; line-height: 1.75rem; color: #003366; font-weight: bold; }
 
-label { padding-top: 5px; margin-right: 20px; }
+label { padding-top: 5px; margin-right: 20px; display: inline-block; font-size: 16px; line-height: 22.4px; font-size: 1rem; line-height: 1.4rem; }
 
 input[type="submit"] { display: inline-block; *display: inline; *zoom: 1; border: none; height: 30px; line-height: 30px; padding: 5px 20px; box-sizing: content-box; -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px; background-clip: padding-box; background: #003366; color: #fff; font-weight: bold; }
 input[type="submit"]:hover, input[type="submit"]:focus { background: #1f4c7a; }
 input[type="submit"]:active { background: #1f4c7a; }
+
+input[type="radio"] { margin: -5px 10px 0 0; }
+
+fieldset { margin: 10px 0; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; background-clip: padding-box; }
 
 /* Login/Passwords Form */
 .post-password-form label { float: none; color: #003366; }
