--- a/css/base.css
+++ b/css/base.css
@@ -2611,6 +2611,7 @@ html, body, button { font-family: "roboto", "Helvetica Neue", Helvetica, Arial, 
 #nav .introtext-full blockquote p, #nav .introtext blockquote p { font-size: 16px; line-height: 24px; font-size: 1rem; line-height: 1.5rem; padding: 0; font-style: italic; }
 #nav .introtext-full blockquote cite, #nav .introtext blockquote cite { padding: 10px 0; text-align: right; color: #fff; opacity: 0.7; font-size: 14px; line-height: 19.6px; font-size: 0.875rem; line-height: 1.225rem; }
 #nav .introtext-full blockquote:before, #nav .introtext blockquote:before { color: #1f4c7a; top: 40px; font-style: normal; font-size: 90px; }
+#nav .introthumb { padding-top: 7px; }
 #nav p.nav-excerpt { color: #dde5f0; font-size: 15px; line-height: 24px; font-style: normal; padding: 0; margin: 0; }
 
 #nav li.level1.has-sub > a:hover, #nav li.level1.focus.has-sub > a { -webkit-border-bottom-right-radius: 0px; -webkit-border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px; background-clip: padding-box; background-color: #003366; color: #fff; }
@@ -3455,9 +3456,10 @@ h2 { font-size: 24px; line-height: 33.6px; font-size: 1.5rem; line-height: 2.1re
 h2.small, h2.subtitle, .sidebar-inline h2, .search-sidebar h2, .sidebar-outline h2, .widget h2 { font-size: 22px; line-height: 30.8px; font-size: 1.375rem; line-height: 1.925rem; }
 .sidebar-inline .quicklinks h2 { font-weight: bold; padding-bottom: 11px; padding-top: 0; }
 .sidebar-inline .quicklinks h2.second { padding-top: 22px; }
-h2.subtitle { padding: 20px 0 22px 0; }
+h2.subtitle { padding: 0 0 22px 0; }
 h2.menu-header { padding: 11px 15px; margin-top: 0px; border-top: 1px solid #dde5f0; }
 .search h2 { padding-top: 4px; }
+main h2:first-child { padding-top: 0; }
 
 h3 { margin: 0; padding: 11px 0; font-size: 20px; line-height: 28px; font-size: 1.25rem; line-height: 1.75rem; }
 h3.abstract { padding: 0 0 22px 0; }
