--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -164,6 +164,7 @@ $font-size-hero-slider-copyright: 14;
 $font-size-textbuttons:		14;
 $font-size-linkicon:		13;
 $font-size-hero-links:		13;
+$font-size-hero-bannertext:	18;
 
 $font-size-content-linkicon:	10;
 $font-size-content-listitem:	15;
@@ -182,6 +183,7 @@ $font-size-nav-flyout-items:	15;
 
 $font-size-h1:			32;
 $font-size-h1-mobilebranding:	24;
+$font-size-h1-banner:		28;
 
 $font-size-h2:			24;
 $font-size-h2-small:		22;
